# CalendarProject-Software-Engineering

./: .gitignore  INTEGRATION_GUIDE.md  README.md  app.config.js  app.json  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js  tsconfig.json
app/: _layout.tsx  index.tsx
backend/: .gitignore  README.md  Response.json  SETUP.md  TWO_STAGE_ARCHITECTURE.md  advanced_ocr.py  app.py  image_preprocessor.py  model.py  requirements.txt
components/: AutoEventExtractorModal.tsx  CalendarMonthView.tsx  CalendarScreen.tsx  CalendarYearView.tsx  DragDropUpload.tsx  DragDropUpload.web.tsx  EventModal.tsx
hooks/: useEvents.ts
ios/: Podfile
ios/Calender/: Info.plist
ios/Calender.xcodeproj/: project.pbxproj
uploads/: last_extraction.json
